# AlgorithmTraining

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_.md  Run.sh  formatall.py  lockfiles
Src/: CMakeLists.txt  main.cpp
Src/01_TwoSum/: CMakeLists.txt  TwoSum.cpp
Src/02_AddTwoNumbers/: AddTwoNumbers .cpp  AddTwoNumbers.cpp  CMakeLists.txt  HeadFiles.h
Src/03_LongestSubstringWithoutRepeatingCharacters/: BadIdea.cpp  CMakeLists.txt  LongestSubstringWithoutRepeatingCharacters.cpp
Src/04_MedianofTwoSortedArrays/: CMakeLists.txt  MedianofTwoSortedArrays.cpp
Src/05_LongestPalindromicSubstring/: CMakeLists.txt  LongestPalindromicSubstring.cpp
Src/101_SymmetricTree/: CMakeLists.txt  SymmetricTree.cpp
Src/102_BinaryTreeLevelOrderTraversal/: BinaryTreeLevelOrderTraversal.cpp
Src/104_MaximumDepthofBinaryTree/: MaximumDepthofBinaryTree.cpp
Src/105_ConstructBinaryTreefromPreorderandInorderTraversal/: CMakeLists.txt  ConstructBinaryTreefromPreorderandInorderTraversal.cpp
Src/10_RegularExpressionMatching/: RegularExpressionMatching.cpp
Src/114_FlattenBinaryTreetoLinkedList/: CMakeLists.txt  FlattenBinaryTreetoLinkedList.cpp
Src/11_ContainerWithMostWater/: ContainerWithMostWater.cpp
Src/121_BestTimetoBuyandSellStock/: CMakeLists.txt
Src/124_BinaryTreeMaximumPathSum/: BinaryTreeMaximumPathSum.cpp  CMakeLists.txt
Src/128_LongestConsecutiveSequence/: LongestConsecutiveSequence.cpp
Src/136_SingleNumber/: CMakeLists.txt
Src/139_WordBreak/: CMakeLists.txt  WordBreak.cpp
Src/141_LinkedListCycle/: CMakeLists.txt
Src/142_LinkedListCycleII/: LinkedListCycleII.cpp
Src/148_SortList/: SortList.cpp
Src/152_MaximumProductSubarray/: MaximumProductSubarray.cpp
Src/155_MinStack/: CMakeLists.txt  MinStack.cpp
Src/15_3Sum/: 3Sum.cpp  CMakeLists.txt
Src/160_IntersectionOfTwoLinkedLists/: CMakeLists.txt
Src/17_LetterCombinationsOfAPhoneNumber/: LetterCombinationsOfAPhoneNumber.cpp
Src/19_RemoveNthNodeFromEndofList/: HeadFiles.h  RemoveNthNodeFromEndofList.cpp
Src/1_Array/: 0027_RemoveElement.cpp  0035_SearchInsertPos.cpp  0048_RotateImage.cpp  0056_MergeIntervals.cpp  0059_SpiralMatrixII.cpp  0073_SetMatrixZeroes.cpp  0209_MinimumSizeSubarraySum.cpp  0498_DiagonalTraverse.cpp  0704_BinarySearch.cpp  0977_SquaresOfASortedArray.cpp  1991_FindTheMiddleIndexInArray.cpp  CMakeLists.txt  README.md
Src/1_ArrayAndString/: 0000_SearchInsertPos.cpp  0005_LongestPalindromicSubstring.cpp  0048_RotateImage.cpp  0056_MergeIntervals.cpp  0059_SpiralMatrixII.cpp  0073_SetMatrixZeroes.cpp  0209_MinimumSizeSubarraySum.cpp  0647_PalindromicSubstring.cpp  0704_BinarySearch.cpp  0977_SquaresOfASortedArray.cpp  1991_FindTheMiddleIndexInArray.cpp  CMakeLists.txt
Src/200_NumberofIslands/: NumberofIslands.cpp
Src/206_ReverseLinkedList/: CMakeLists.txt  ReverseLinkedList.cpp
Src/20_ValidParentheses/: ValidParentheses.cpp
Src/215_KthLargestElementInAnArray/: CMakeLists.txt  KthLargestElementInAnArray.cpp
Src/21_MergeTwoSortedLists/: CMakeLists.txt  CustomMatcher.h  MergeTwoSortedLists.cpp
Src/22_GenerateParentheses/: CMakeLists.txt  GenerateParentheses.cpp
Src/23_MergeKSortedLists/: MergeKSortedLists.cpp
Src/2_LinkedList/: 0019_RemoveNthNodefromEndOfList.cpp  0024_SwapNodesInPairs.cpp  0142_LinkedListCycleII.cpp  0160_IntersectionOfTwoLinkedListsIcci.cpp  0203_RemoveLinkedListElements.cpp  0206_ReverseLinkedList.cpp  0707_DesignLinkedList.cpp  203_RemoveLinkedListElements.cpp  CMakeLists.txt  README.md
Src/31_NextPermutation/: NextPermutation.cpp
Src/32_LongestValidParentheses/: LongestValidParentheses.cpp
Src/34_FindFirstAndLastPositionOfElementInSortedArray/: CMakeLists.txt
Src/39_CombinationSum/: CombinationSum.cpp
Src/3_Hash/: 0001_TwoSum.cpp  0015_3Sum.cpp  0018_4Sum.cpp  0202_HappyNumber.cpp  0242_ValidAnagram.cpp  0349_IntersectionOfTwoArrays.cpp  0383_RansomNote.cpp  0454_4SumII.cpp  CMakeLists.txt  README.md
Src/42_TrappingRainWater/: TrappingRainWater.cpp
Src/46_Permutations/: Permutations.cpp
Src/48_RotateImage/: CMakeLists.txt  RotateImage.cpp
Src/49_GroupAnagrams/: GroupAnagrams.cpp
Src/4_String/: 0005_LongestPalindromicSubstring.cpp  0014_LongestCommonPrefix.cpp  0028_FindTheIndexOfTheFirstOccurrenceInAString.cpp  0151_ReverseWordsInAString.cpp  0344_ReverseString.cpp  0541_ReverseStringII.cpp  0647_PalindromicSubstring.cpp  CMakeLists.txt  README.md  ZJ05_ReplaceSpace.cpp  ZJ58_ReverseLeftWords.cpp
Src/53_MaximumSubarray/: CMakeLists.txt
Src/55_JumpGame/: CMakeLists.txt
Src/56_MergeIntervals/: MergeIntervals.cpp
Src/62_UniquePaths/: UniquePaths.cpp
Src/64_MinimumPathSum/: CMakeLists.txt  MinimumPathSum.cpp
Src/70_ClimbingStairs/: ClimbingStairs.cpp
Src/72_EditDistance/: EditDistance.cpp
Src/76_MinimumWindowSubstring/: CMakeLists.txt
Src/78_Subsets/: CMakeLists.txt
Src/79_WordSearch/: WordSearch.cpp
Src/84_LargestRectangleInHistogram/: CMakeLists.txt  LargestRectangleInHistogram.cpp
Src/94_BinaryTreeInorderTraversal/: BinaryTreeInorderTraversal.cpp  CMakeLists.txt
Src/96_UniqueBinarySearchTrees/: UniqueBinarySearchTrees.cpp
Src/98_ValidateBinarySearchTree/: ValidateBinarySearchTree.cpp
Src/Array/: 240_SearchA2DMatrixII.cpp  448_FindAllNumbersDisappearedInAnArray.cpp  48_RotateImage.cpp  769_MaxChunksToMakeSorted.cpp  CMakeLists.txt
Src/DataStruct/: CMakeLists.txt  SqStack.cpp
Src/DoublePointer/: 142_LinkedListCycleII.cpp  167_TwoSum.cpp  524_LongestWordInDicThroughtDel.cpp  633_SumOfSquareNumbers.cpp  680_ValidPalindromeII.cpp  76_MinimumWindowSubstring.cpp  88_MergeSortedArray.cpp  CMakeLists.txt
Src/Greedy/: 122_BestTimeToBuyAndSellStock.cpp  135_Candy.cpp  406_QueueReconstructionByHeight.cpp  435_Non-overlappingIntervals.cpp  452_MinimumNumberOfArrrowToBurstBalloons.cpp  455_AssignCookies.cpp  55_JumpGame.cpp  605_CanPlaceFlowers.cpp  665_NonDecreasingArray.cpp  763_PartitionLabels.cpp  CMakeLists.txt
Src/Hash/: 128_LongestConsecutiveSequence.cpp  CMakeLists.txt  SimpleHash.cpp  TwoSum.cpp
Src/Middle/: 154_FindMinimumInRotatedSortedArrayII.cpp  34_FindFirstAndLastPos.cpp  (+5 more)
(+135 files in other folders)
