add_subdirectory(01_TwoSum)
add_subdirectory(02_AddTwoNumbers)
add_subdirectory(03_LongestSubstringWithoutRepeatingCharacters)
add_subdirectory(04_MedianofTwoSortedArrays)
add_subdirectory(05_LongestPalindromicSubstring)
add_subdirectory(10_RegularExpressionMatching)
add_subdirectory(11_ContainerWithMostWater)
add_subdirectory(15_3Sum)
add_subdirectory(17_LetterCombinationsOfAPhoneNumber)
add_subdirectory(19_RemoveNthNodeFromEndofList)
add_subdirectory(20_ValidParentheses)
add_subdirectory(21_MergeTwoSortedLists)
add_subdirectory(22_GenerateParentheses)
add_subdirectory(23_MergeKSortedLists)
add_subdirectory(31_NextPermutation)
add_subdirectory(32_LongestValidParentheses)
add_subdirectory(33_SearchInRotatedSortedArray)
add_subdirectory(34_FindFirstAndLastPositionOfElementInSortedArray)
add_subdirectory(39_CombinationSum)