add_subdirectory(01_TwoSum)
add_subdirectory(02_AddTwoNumbers)
add_subdirectory(03_LongestSubstringWithoutRepeatingCharacters)
add_subdirectory(04_MedianofTwoSortedArrays)
add_subdirectory(05_LongestPalindromicSubstring)
add_subdirectory(10_RegularExpressionMatching)
add_subdirectory(11_ContainerWithMostWater)
add_subdirectory(15_3Sum)
add_subdirectory(17_LetterCombinationsOfAPhoneNumber)
add_subdirectory(19_RemoveNthNodeFromEndofList)
add_subdirectory(20_ValidParentheses)
add_subdirectory(21_MergeTwoSortedLists)
add_subdirectory(22_GenerateParentheses)
add_subdirectory(23_MergeKSortedLists)
add_subdirectory(31_NextPermutation)
add_subdirectory(32_LongestValidParentheses)
add_subdirectory(33_SearchInRotatedSortedArray)
add_subdirectory(34_FindFirstAndLastPositionOfElementInSortedArray)
add_subdirectory(39_CombinationSum)
add_subdirectory(42_TrappingRainWater)
add_subdirectory(46_Permutations)
add_subdirectory(48_RotateImage)
add_subdirectory(49_GroupAnagrams)
add_subdirectory(53_MaximumSubarray)
add_subdirectory(55_JumpGame)
add_subdirectory(56_MergeIntervals)
add_subdirectory(62_UniquePaths)
add_subdirectory(64_MinimumPathSum)
add_subdirectory(70_ClimbingStairs)