add_subdirectory(Greedy)
add_subdirectory(DataStruct)
add_subdirectory(TestTool)
add_subdirectory(01_TwoSum)
#add_subdirectory(02_AddTwoNumbers)
#add_subdirectory(03_LongestSubstringWithoutRepeatingCharacters)
#add_subdirectory(04_MedianofTwoSortedArrays)
#add_subdirectory(05_LongestPalindromicSubstring)
#add_subdirectory(10_RegularExpressionMatching)
#add_subdirectory(11_ContainerWithMostWater)
#add_subdirectory(15_3Sum)
#add_subdirectory(17_LetterCombinationsOfAPhoneNumber)
#add_subdirectory(19_RemoveNthNodeFromEndofList)
#add_subdirectory(20_ValidParentheses)
#add_subdirectory(21_MergeTwoSortedLists)
#add_subdirectory(22_GenerateParentheses)
#add_subdirectory(23_MergeKSortedLists)
#add_subdirectory(31_NextPermutation)
#add_subdirectory(32_LongestValidParentheses)
#add_subdirectory(33_SearchInRotatedSortedArray)
#add_subdirectory(34_FindFirstAndLastPositionOfElementInSortedArray)
#add_subdirectory(39_CombinationSum)
#add_subdirectory(42_TrappingRainWater)
#add_subdirectory(46_Permutations)
#add_subdirectory(48_RotateImage)
#add_subdirectory(49_GroupAnagrams)
#add_subdirectory(53_MaximumSubarray)
#add_subdirectory(55_JumpGame)
#add_subdirectory(56_MergeIntervals)
#add_subdirectory(62_UniquePaths)
#add_subdirectory(64_MinimumPathSum)
#add_subdirectory(70_ClimbingStairs)
#add_subdirectory(72_EditDistance)
#add_subdirectory(75_SortColors)
#add_subdirectory(76_MinimumWindowSubstring)
#add_subdirectory(78_Subsets)
#add_subdirectory(79_WordSearch)
#add_subdirectory(84_LargestRectangleInHistogram)
#add_subdirectory(85_MaximalRectangle)
#add_subdirectory(94_BinaryTreeInorderTraversal)
#add_subdirectory(96_UniqueBinarySearchTrees)
#add_subdirectory(98_ValidateBinarySearchTree)
#add_subdirectory(101_SymmetricTree)
#add_subdirectory(102_BinaryTreeLevelOrderTraversal)
#add_subdirectory(104_MaximumDepthofBinaryTree)
#add_subdirectory(105_ConstructBinaryTreefromPreorderandInorderTraversal)
#add_subdirectory(114_FlattenBinaryTreetoLinkedList)
#add_subdirectory(121_BestTimetoBuyandSellStock)
#add_subdirectory(124_BinaryTreeMaximumPathSum)
#add_subdirectory(128_LongestConsecutiveSequence)
#add_subdirectory(136_SingleNumber)
#add_subdirectory(139_WordBreak)
#add_subdirectory(141_LinkedListCycle)
#add_subdirectory(142_LinkedListCycleII)
#add_subdirectory(146_LRUCache)
#add_subdirectory(148_SortList)
#add_subdirectory(152_MaximumProductSubarray)
#add_subdirectory(155_MinStack)
#add_subdirectory(160_IntersectionOfTwoLinkedLists)
#add_subdirectory(169_MajorityElement)
#add_subdirectory(198_HouseRobber)
#add_subdirectory(200_NumberofIslands)
#add_subdirectory(206_ReverseLinkedList)
#add_subdirectory(207_CourseSchedule)
#add_subdirectory(208_ImplementTrie_PrefixTree)
#add_subdirectory(215_KthLargestElementInAnArray)
